--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,14 +1,19 @@
 {
-  "semi": false,
-  "singleQuote": true,
+  "printWidth": 80,
   "tabWidth": 4,
-  "trailingComma": "none",
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
   "overrides": [
     {
-      "files": "*.json",
+      "files": ["*.json", "*.config.js", "*.config.ts"],
       "options": {
         "tabWidth": 2
       }
     }
-  ]
+  ],
+  "parser": "typescript"
 }
