--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/node": "^20.5.7",
 		"@vite-pwa/assets-generator": "^0.0.8",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
