--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,12 @@
 		"types": [
 			"node"
 		]
-	}
+	},
+	"exclude": [
+		"node_modules/*",
+		"static/*",
+		".svelte-kit/*"
+	]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
