--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@tensorflow-models/coco-ssd": "^2.2.3",
 		"@tensorflow/tfjs": "^4.10.0",
 		"@tensorflow/tfjs-backend-webgl": "^4.10.0"
