--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"type": "module",
+	"packageManager": "pnpm@8.7.1",
 	"scripts": {
 		"dev": "vite dev --host",
 		"build": "vite build",
